--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,15 +1,5 @@
-github: []
-patreon: 
-open_collective: 
-ko_fi: 
-tidelift: 
-community_bridge: 
-liberapay: 
-issuehunt: 
-lfx_crowdfunding: 
-polar: 
-buy_me_a_coffee: 
-thanks_dev: 
-
-custom: ['https://etherscan.io/address/0x2570Fc924Fd773FA81caD110ebDA115A7726E43C', 'https://basescan.org/address/0x2570Fc924Fd773FA81caD110ebDA115A7726E43C']
-
+custom: [
+  'https://etherscan.io/address/0x2570Fc924Fd773FA81caD110ebDA115A7726E43C',
+  'https://basescan.org/address/0x2570Fc924Fd773FA81caD110ebDA115A7726E43C',
+  'https://cash.app/$copwatch918'
+]
